# graphed-corpus-mvp

./: CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.graphed/: state.json
.graphed/M0/: attempts.md
.graphed/M0.5/: attempts.md
corpus/references/: adl_q1.json  adl_q2.json  adl_q3.json  adl_q4.json  adl_q5.json  adl_q6.json  adl_q7.json  adl_q8.json  ttbar_4j1b_btag_down.json  ttbar_4j1b_btag_up.json  ttbar_4j1b_jes_down.json  ttbar_4j1b_jes_up.json  ttbar_4j1b_nominal.json  ttbar_4j2b_btag_down.json  ttbar_4j2b_btag_up.json  ttbar_4j2b_jes_down.json  ttbar_4j2b_jes_up.json  ttbar_4j2b_nominal.json  ttgamma_jes_down.json  ttgamma_jes_up.json  ttgamma_nominal.json  ttgamma_pho_down.json  ttgamma_pho_up.json
docs/: api.rst  conf.py  design.rst  graph_bloat_note.md  improvements.rst  index.rst
docs/requirements/: ops_catalog.md
scripts/: advance.py  gen_references.py
src/graphed_corpus/: __init__.py  dataset.py  histograms.py
src/graphed_corpus/analyses/: __init__.py  adl.py  systematics.py
tests/frozen/m05/: conftest.py  test_catalog.py  test_determinism.py  test_fixtures_reproduce.py  test_systematics.py
